src/objects/CR_Step__c.object
<CustomObject>
    <description>Change Request Step</description>
    <fields>
        <fullName>Alternate_CR_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate Step for any Decision Points</description>
        <inlineHelpText>Alternate Step for any Decision Points</inlineHelpText>
        <label>Alternate CR Step</label>
        <referenceTo>CR_Step__c</referenceTo>
        <relationshipLabel>CR Steps (Alternate CR Step)</relationshipLabel>
        <relationshipName>Alternate_CR_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>CR Steps</relationshipLabel>
        <relationshipName>CR_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments Entered upon completion of the process</description>
        <inlineHelpText>Comments Entered upon completion of the process</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <description>The important of a CR Step 

Range from 1 ( highest) to 5 ( lowest)</description>
        <inlineHelpText>The important of a CR Step</inlineHelpText>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependent_CR_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dependent CR Step -</description>
        <inlineHelpText>Dependent CR Step -</inlineHelpText>
        <label>Dependent CR Step</label>
        <referenceTo>CR_Step__c</referenceTo>
        <relationshipLabel>Dependent CR Steps</relationshipLabel>
        <relationshipName>Dependent_CR_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feed_Text__c</fullName>
        <description>Any Text Entered here will be used for Chatter Feed along with the Activity Name</description>
        <inlineHelpText>Any Text Entered here will be used for Chatter Feed along with the Activity Name</inlineHelpText>
        <label>Feed Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_CR_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Next CR Step - will be null for any Terminal Step</description>
        <inlineHelpText>Next CR Step - will be null for any Terminal Step</inlineHelpText>
        <label>Next CR Step</label>
        <referenceTo>CR_Step__c</referenceTo>
        <relationshipLabel>Next CR Step</relationshipLabel>
        <relationshipName>CR_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <description>Process Workflow Owner - in the Master Change Process from CSC</description>
        <inlineHelpText>Process Workflow Owner - in the Master Change Process from CSC</inlineHelpText>
        <label>Process Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Step_Description__c</fullName>
        <description>short Description of the Process Step</description>
        <inlineHelpText>short Description of the Process Step</inlineHelpText>
        <label>Process Step Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Step_Name__c</fullName>
        <description>Short Name of the CR Process Step</description>
        <inlineHelpText>Short Name of the Process Step</inlineHelpText>
        <label>Process Step Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <description>A Sequence Number denoting the progress of the CR</description>
        <inlineHelpText>A sequence Number denoting the progress of the CR</inlineHelpText>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Type__c</fullName>
        <description>Each Process Steps can be Activity, Decision Point. Start, Terminal or Data collection point</description>
        <inlineHelpText>Each Process Steps can be Activity, Decision Point. Start, Terminal or Data collection point</inlineHelpText>
        <label>Step Type</label>
        <picklist>
            <picklistValues>
                <fullName>Starting Step</fullName>
                <color>#000099</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Step</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminal Step</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Collection Point</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CR Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Change_Request__c</columns>
        <columns>Process_Owner__c</columns>
        <columns>Process_Step_Name__c</columns>
        <columns>Step_Type__c</columns>
        <columns>Next_CR_Step__c</columns>
        <columns>Dependent_CR_Step__c</columns>
        <columns>Alternate_CR_Step__c</columns>
        <columns>Status__c</columns>
        <columns>Process_Step_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRP#{00000}</displayFormat>
        <label>CR Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id0000000zegaEAA_00Nd0000006sQQHEA2</fullName>
        <active>true</active>
        <field>CR_Participant__c.CR_Steps_Working_On__c</field>
        <filterItems>
            <field>CR_Step__c.Change_Request__c</field>
            <operation>equals</operation>
            <valueField>$Source.Chage_Request__c</valueField>
        </filterItems>
        <filterItems>
            <field>CR_Step__c.Status__c</field>
            <operation>contains</operation>
            <value>Started</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CR Participant_CR Steps Working On</name>
        <sourceObject>CR_Participant__c</sourceObject>
    </namedFilters>
    <pluralLabel>CR Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>